setting up doc for review

--- a/lortie.review.tex
+++ b/lortie.review.tex
@@ -9,26 +9,26 @@
 \Plainreviewer{Christopher Lortie}
 
 %% about the book
-\Booktitle{R for Data Science}
-\Bookauthor{H. Wickham and G. Grolemund}
-\Publisher{O'Reilly Media}
-\Pubaddress{Canada}
-\Pubyear{2016}
-\ISBN{978-1491910399}
+\Booktitle{Applied Time Series Analysis With R. Second Edition.}
+\Bookauthor{Wayne A. Woodward, Henry L. Gray, and Alan C. Elliott}
+\Publisher{CRC Press}
+\Pubaddress{USA}
+\Pubyear{2017}
+\ISBN{9781498734226}
 \Pages{522}
-\Price{USD 39.11 (P)}
-\URL{http://http://r4ds.had.co.nz/}
+\Price{USD 109.95(P)}
+\URL{https://www.crcpress.com/Applied-Time-Series-Analysis-with-R-Second-Edition/Woodward-Gray-Elliott/p/book/9781498734226}
 %% if different from \Booktitle also set
 %% \Plaintitle{Visualizing Categorical Data}
 %% \Shorttitle{Visualizing Categorical Data}
 
 %% publication information
 %% NOTE: Typically, this can be left commented and will be filled out by the technical editor
-%% \Volume{50}
-%% \Issue{7}
-%% \Month{June}
-%% \Year{2012}
-%% \Submitdate{2012-06-04}
+%% \Volume{}
+%% \Issue{}
+%% \Month{}
+%% \Year{2018}
+%% \Submitdate{2018-03-31}
 
 %% address of (at least one) author
 \Address{
@@ -45,14 +45,16 @@
 
 \begin{document}
 
-\textbf{Introduction} \newline
+\textbf{Making time for time series} \newline
+Introduce authors, time series and why important, and then explain the book.
+
 The authors of this book are eminent data scientists within the \proglang{R} community particularly recognized for their recent work associated with \pkg{RStudio}. \proglang{R} is a statistical language and environment that functions independently of \pkg{RStudio} through support from the \href{https://www.r-project.org/about.html}{R Foundation} and \href{https://cran.r-project.org/mirrors.html}{CRAN}(The Comprehensive R Archive Network) to host packages, and it is licensed as free software. \pkg{RStudio} is an open-source development environment for \proglang{R} with a free desktop deployment but also has pro, server, and other options as paid products. The first author \href{https://en.wikipedia.org/wiki/Hadley_Wickham}{Hadley Wickham} is the Chief Scientist at \pkg{RStudio}, and the second author \href{http://www.oreilly.com/pub/au/5570}{Garrett Grolemund} maintains shiny apps and focuses extensively on education for this organization.  There are at least two major sources of consistent package development for \proglang{R} - \pkg{RStudio} and \href{https://ropensci.org/packages/}{rOpenSci} foundation. That said, there are 12,412 packages now available on CRAN for \proglang{R} (and more available directly from authors often via GitHub), but the developments forwarded both by \pkg{RStudio} and rOpenSci are unique in some respects because each have aligned sets of packages to support their respective missions. At rOpenSci, the packages are primarily associated with acquiring open data and handling it; whilst at \pkg{RStudio}, the package sets are primarily built for data wrangling and now reporting using its environment. Both have developed much, much more, but the purpose of the most commonly used packages differs (but are are not exclusive). All this is to say that the book is written as a general tool for better \proglang{R} use for a complete data science workflow but via specific packages and their respective grammar. The assumption of the authors is nonetheless that you will work in RStudio, and the book is written to take advantage of that specific environment and many of the packages are from RStudio affiliates. There is a tip icon interspersed throughout the book often associated with short-cuts for \pkg{RStudio}, but there are worked data science examples that do not have to be run in \pkg{RStudio}. However, the final section of the book entitled 'Communicate' is written for \pkg{RStudio} and describes how to use \pkg{RMarkdown} to effectively communicate code, data visualization, and reporting using this environment. It is wise to be cognizant of the fact that the workflow and thinking described are designed to take advantage of the structure, logic, and function of the specific packages covered here. This is an appropriate and powerful set of tools for the data scientist, and the organization of the book appropriately reflects these targeted strengths. 'R for Data Science' thus describes a data science ecosystem. It is an incredibly useful ecosystem to consider because it provides a consistent and well-supported worflow. The workflow shifted my paradigm from data wrangling, statistics, then data visualization to data wrangling, data visualization, exploratory data analyses, then model fitting. The book provides a coherent and rapid mechanism to assess whether one should occupy this idea and code space for their statistical software needs. \newline
 
-\textbf{Key elements of 'R for Data Science' Book} \newline
-The ecosystem proposed is clearly described in the preface to the book. A data science model is developed, well articulated, and it is the anchor for the remainder of the book. I propose that most technical books subscribe to a model either implicitly or explicitly. For the purposes of this review, a model is defined very broadly as a representation of a system, and it can include verbal, symbolic, and visual explanations of how the system functions \citep{Eaton2016}. The model herein is a (verbal and visual) workflow, and the first key element of the book. Import, tidy, transform-visualize-model iteratively, followed by communicate. The worflow is described in text, illustrated, and sets of chapters are linked to the workflow throughout the book. This workflow is useful visual guide to the reader and provides a big picture to align and fit specific details examined in depth back to higher-order data science objectives. The chapters are generally organized to move the the reader through this workflow in order; however, the book begins with data visualization. The argument presented is that visualization is a very compelling strength of \proglang{R} and that seeing the data can inform subsequent work with the data including later steps within the workflow such as the application of statistical models. This chapter organization also provides an immediate highlight of one of the strengths of this ecosystem - the package ggplot2 \citep{Wickham2009}. The second major element of the book is thus the packages proposed to implement this workflow. This is important because some of the packages diverge from traditional grammar or base \proglang{R} syntax. Most chapters are associated with a specific package with this link explicitly listed within the chapter titles in 14 of 24 chapters. These 14 packages are extensively described in this book with 9 of the offerings developed by active members from \pkg{RStudio}. This in no way is an issue because all are freely available for use on CRAN, but the chapters that use a specific package to explain data science, quite positively, leverage the benefits of that package. This leads to the third major element of R for Data Science - the grammar and philosophy of visualizing and wrangling data. A layered grammar of graphics is invoked \citep{Wickham2010} and described both in general terms and through increasingly, built-up worked examples. This grammar is different from working in base \proglang{R} and proposes that the first step in visualizing data is mapping the data to a graphical construct (i.e. numbers or values must be translated to an aesthetic). Graphs are then built up from layers. This leads to a 7-parameter template that is the grammar and thus system for rendering plots in \proglang{R} using this package. This may seem daunting, but the strengths of using this grammar are quite literally illustrated conceptually, with code, and with data visualization. The rules of the grammar align well with the broader first element of the book (i.e. this is an ecosystem that emphasizes logic and workflow thinking). This philosophy and an alternative grammar to base \proglang{R} is further augmented with the package \pkg{dplyr} (now bundled into a broader package entitled the \pkg{tidyverse}). Tidy data are a key element of the book \citep{Wickham2014}, and the nomenclature evolved from an ecosystem of packages predicated upon data organized very specifically into dataframes (now \pkg{tibbles}) for logic, rapid vectorized operations, and coding that is more literate because it is comprehensible by machines and people \citep{Knuth1984}. Wrangling as described in the book 'reads' very differently from base \proglang{R} because it is not from inside-out but left-to-right via pipes. The logic is explained clearly in the book. The consilience in coding using these packages is appealing and infuses more data science thinking into \proglang{R} as a statistical language. The reader is lead to expect that this data science ecosystem can set up data structures and visualizations to better support statistical analyses including treatment of factors, models, iterative testing. The later steps in the workflow adhere less strictly to the grammer but align with the philosophy, and 
-an ecosystem of positive interactions between steps is maintained. \newline
+\textbf{Theory} \newline
+A review of the theory
+ \newline
 
-\textbf{Critical analysis} \newline
+\textbf{Code and case studies} \newline
 A critical analysis of a statistical sofware book can address a wide range of questions from generic to programming language or software specific. There are at least three critical data science/general statistical questions that emerged in reviewing 'R for Data Science'. \newline 
 
 Data science is a complex domain and decisions associated with wrangling big and little data are non-trivial \citep{Gandomi2015, Peters2014, Marx2013}. Data science can provide data thinking tools \citep{Baumer2015}. A data thinking tool can be the heuristic, semantics, and concepts needed to work with data. \textbf{Does this book (or any data science book for that matter) effectively communicate basic versus advanced data science concepts to the reader?} Criteria can include any of the following attributes: clarity of writing, supporting visuals that make complex data science concepts accessible, and an appropriate balance between detail and general understanding of process. 'R for Data Science' was successful in all three potential dimensions of communication. The writing is direct. Most chapters lead with code, examples, then the description followed. This exposes the reader more rapidly to the relevant material needed to grasp and do the data science. The book is primarily written in a show-then-tell format, and this approach reduces the need for the reader to process large chunks of description (introductions are very brief in each chapter). Telling one how to do something versus showing it directly can of course be appropriate in some contexts, and readers have different learning styles. Nonetheless, showing the data science first engages and challenges the reader to read the \proglang{R} code and learn the grammar. Reading code others have written is an important skill and considering a problem before seeing the solution stimulates deeper learning. If anything, there could have been even more development of the problem-solution model in the writing, but I recognize that this can sometimes come at the cost of clarity and the patience of readers at different levels. There are exercises provided to consolidate learning and they are pitched at the right level consistent with each chapter. The supporting visuals excelled (but not \proglang{Excel}) at visualizing the layered grammar of graphics in \pkg{ggplot2}, relational data with \pkg{dplyr}, and subsetting with vectors. Visual learners will appreciate the concepts illustrated, use of color, and a certain to be favorite - the pepper shaker, with pepper packet in it, with pepper in the packet - to illustrate subsetting. Most chapters balance detail and general understanding of process well. This it not to say that the details of coding were never a challenge to reconcile with the big picture. Many data science and coding concepts are complex. The 'Iteration with \pkg{purr}' chapter was a challenge in merging and contrasting the details between different options such as for loops versus functionals. However, later chapters such as those in the model section struck a better balance. This difference can in part be due to an audience experience bias. My primary experience is in statistics and not data science. Consequently, some of the data science concepts were more challenging to grasp and link to higher-order ideas whilst model fitting was not. Some data science concepts align more readily with statistical worflows and semantics. This suggests that different audiences will be able to better capitalize on the show-then-tell approach depending on their experience. The book is thus well pitched for beginner to intermediate data scientists and likely to statisticians with an intermediate level of experience. The communication and writing style is accessible and not unduly technical for all readers.  \newline
