working on general intro

--- a/lortie.review.tex
+++ b/lortie.review.tex
@@ -45,8 +45,8 @@
 
 \begin{document}
 
-\textbf{Make time for time series} \newline
-
+\textbf{Make time for time series statistics} \newline
+Many data include time or have longitudinal dimensionalilty. When these data include an index of time, i.e. measures at regular or periodically successive intervals, statistics that use time sequencing in some capacity are appropriate. There are at least two major categories of statistics - 'time series analysis' to examine trends and address potential periodicity in the data and 'time series foresting' that incorporates time into models with the intent of predicting future outcomes. Most major disciplines of data inquiry now use either or both of these categories of statistics to examine patterns and infer causality. 
 
 
 \textbf{Content} \newline
