--- a/lortie.review.tex
+++ b/lortie.review.tex
@@ -50,7 +50,7 @@ Many data include time or have longitudinal dimensionalilty. When these data inc
 
 
 \textbf{Content} \newline
-This is first and foremost a statistics book \citep{Woodward}. However, the general context of time series is not well developed,and it is assumed that a. the reader is already familiar with time series to some extent and b. the reader is competent and able to parse the maths and proofs associated with relevant axioms to particular aspects of time series. This is unfortunate because the general framing of time series is important. The purpose, class, method, and different forms of data all shape subsequent analyses and without a guide for the reader in making these decisions, it is challenging to know what specific chapters are relevant to the task at hand.
+This is first and foremost a statistics book \citep{Woodward}. However, the general context of time series is not well developed,and it is assumed that a. the reader is already familiar with time series to some extent and b. the reader is competent and able to parse the maths and proofs associated with relevant axioms to particular aspects of time series. This is unfortunate because the general framing of time series is important. The purpose, class, method, and different forms of data all shape subsequent analyses and without a guide for the reader in making these decisions, it is challenging to know what specific chapters are relevant to the task at hand. Unification and integration at the start of the book would be helpful to the reader. This is done to some extent by the examples provided, but the description resolves very rapidly into details.
 
 
 \bibliography{literature}
