--- a/literature.bib
+++ b/literature.bib
@@ -1,4 +1,4 @@
-@book{Woodward,
+@book{Woodward2017,
    author = {Woodward, W.A. and Gray, H.L. and Elliott, A.C.},
    title = {Applied times series analysis with R. Second Edition},
    publisher = {CRC Press},
