--- a/literature.bib
+++ b/literature.bib
@@ -9,5 +9,105 @@
    type = {Book}
 }
 
+@book{Coghlan2017,
+   author = {Coghlan, A.},
+   title = {A little book of R for Time Series},
+   publisher = {Wellcome Treyst Sanger Institute},
+   address = {Cambridge, UK},
+   edition = {Release 0.2},
+   pages = {77},
+   year = {2017},
+   type = {Book}
+}
+
+@article{Killick2017,
+   author = {Killick, Rebecca},
+   title = {Applied Time Series Analysis With R, Second Edition by Wayne A. Woodward, Henry L. Gray, and Alan C. Elliott (eds). Published by CRC Press, 2017. Total number of pages: 618. ISBN: 9781498734226},
+   journal = {Journal of Time Series Analysis},
+   volume = {39},
+   number = {1},
+   pages = {107-107},
+   ISSN = {0143-9782},
+   DOI = {10.1111/jtsa.12273},
+   url = {https://doi.org/10.1111/jtsa.12273},
+   year = {2017},
+   type = {Journal Article}
+}
+
+@article{Tang2015,
+   author = {Tang, Ling and Lv, Huiling and Yang, Fengmei and Yu, Lean},
+   title = {Complexity testing techniques for time series data: A comprehensive literature review},
+   journal = {Chaos, Solitons & Fractals},
+   volume = {81},
+   pages = {117-135},
+   ISSN = {0960-0779},
+   DOI = {https://doi.org/10.1016/j.chaos.2015.09.002},
+   url = {http://www.sciencedirect.com/science/article/pii/S0960077915002817},
+   year = {2015},
+   type = {Journal Article}
+}
+
+@article{Webby1996,
+   author = {Webby, Richard and O'Connor, Marcus},
+   title = {Judgemental and statistical time series forecasting: a review of the literature},
+   journal = {International Journal of Forecasting},
+   volume = {12},
+   number = {1},
+   pages = {91-118},
+   ISSN = {0169-2070},
+   DOI = {https://doi.org/10.1016/0169-2070(95)00644-3},
+   url = {http://www.sciencedirect.com/science/article/pii/0169207095006443},
+   year = {1996},
+   type = {Journal Article}
+}
+
+@article{Fu2011,
+   author = {Fu, Tak-chung},
+   title = {A review on time series data mining},
+   journal = {Engineering Applications of Artificial Intelligence},
+   volume = {24},
+   number = {1},
+   pages = {164-181},
+   ISSN = {0952-1976},
+   DOI = {https://doi.org/10.1016/j.engappai.2010.09.007},
+   url = {http://www.sciencedirect.com/science/article/pii/S0952197610001727},
+   year = {2011},
+   type = {Journal Article}
+}
+
+@article{Gooijer2006,
+   author = {De Gooijer, Jan G. and Hyndman, Rob J.},
+   title = {25 years of time series forecasting},
+   journal = {International Journal of Forecasting},
+   volume = {22},
+   number = {3},
+   pages = {443-473},
+   ISSN = {0169-2070},
+   DOI = {https://doi.org/10.1016/j.ijforecast.2006.01.001},
+   url = {http://www.sciencedirect.com/science/article/pii/S0169207006000021},
+   year = {2006},
+   type = {Journal Article}
+}
+
+@book{Lovric2012,
+   author = {Lovric, Miodrag and Milanovic, Marina and Stamenkovic, Milan},
+   title = {Time series data mining: Similarity search and its application to the stock indices in the region},
+   volume = {7},
+   pages = {1605-1614},
+   year = {2012},
+   type = {Book}
+}
+
+@article{Mishra2017,
+   author = {Mishra, Neelam and Soni, Hemant Kumar and Sharma, Sanjiv and Upadhyay, A. K.},
+   title = {A Comprehensive Survey of Data Mining Techniques on Time Series Data for Rainfall Prediction},
+   journal = {Journal of ICT Research and Applications; Vol 11, No 2 (2017)},
+   url = {http://journals.itb.ac.id/index.php/jictra/article/view/2604},
+   year = {2017},
+   type = {Journal Article}
+}
+
+
+
 
 
