final citations added

--- a/literature.bib
+++ b/literature.bib
@@ -37,7 +37,7 @@
 @article{Tang2015,
    author = {Tang, Ling and Lv, Huiling and Yang, Fengmei and Yu, Lean},
    title = {Complexity testing techniques for time series data: A comprehensive literature review},
-   journal = {Chaos, Solitons & Fractals},
+   journal = {Chaos, Solitons and Fractals},
    volume = {81},
    pages = {117-135},
    ISSN = {0960-0779},
@@ -106,6 +106,19 @@
    year = {2017},
    type = {Journal Article}
 }
+
+@article{Senin2009,
+   author = {Senin, P.V.},
+   title = {Literature review on time series indexing},
+   journal = {CDSL Technical Report},
+   volume = {09},
+   number = {08},
+   pages = {1-36},
+   year = {2009},
+   url = {https://www.semanticscholar.org/paper/Literature-Review-on-Time-Series-Indexing-Senin/57c40521de0a3a57bbd4008d2938e054aa194a01},
+   type = {Journal Article}
+}
+
 
 
 
