--- a/lortie.review.tex
+++ b/lortie.review.tex
@@ -46,11 +46,11 @@
 \begin{document}
 
 \textbf{Make time for time series statistics} \newline
-Many data include time or have longitudinal dimensionalilty. When these data include an index of time, i.e. measures at regular or periodically successive intervals, statistics that use time sequencing in some capacity are appropriate. There are at least two major categories of statistics - 'time series analysis' to examine trends and address potential periodicity in the data and 'time series foresting' that incorporates time into models with the intent of predicting future outcomes. Most major disciplines of data inquiry now use either or both of these categories of statistics to examine patterns and infer causality \citep{Gooijer2006}. Consequently, investing time into a comprehensive text on these topics is not lost time.  \newline
+Many data include time or have longitudinal dimensionalilty. When these data include an index of time, i.e. measures at regular or periodically successive intervals, statistics that use time sequencing in some capacity are appropriate \citep{Senin2009}. There are at least two major categories of statistics - 'time series analysis' to examine trends and address potential periodicity in the data and 'time series foresting' that incorporates time into models with the intent of predicting future outcomes \citep{Senin2009}. Most major disciplines of data inquiry now use either or both of these categories of statistics to examine patterns and infer causality \citep{Gooijer2006}. Consequently, investing time into a comprehensive text on these topics is not lost time.  \newline
 
 
 \textbf{Content} \newline
-This is first and foremost a statistics book \citep{Woodward2017}. Nonetheless, the general context of time series is not well developed, and it is assumed that a. the reader is already familiar with time series to some extent and b. the reader is competent and able to parse the maths and proofs associated with relevant axioms to particular aspects of time series. This is unfortunate because the general utility of and decision to implement time series are important and non-trivial \citep{Fu2011}. The purpose, class, method, and different forms of data all shape subsequent analyses and without a guide for the reader in making these decisions, it is challenging to know what specific chapters are relevant to the task at hand. Unification and integration at the start of the book would be helpful to the reader. This is done to some extent by the examples provided, but the description resolves very rapidly into details. Consequently, this is certainly an extraordinarily thorough statistics text, but the reader must be relatively expert. \newline
+This is first and foremost a statistics book \citep{Woodward2017}. Nonetheless, the general context of time series is not well developed, and it is assumed that a. the reader is already familiar with time series to some extent and b. the reader is competent and able to parse the maths and proofs associated with relevant axioms to particular aspects of time series. This is unfortunate because the general utility of and decision to implement time series are important, non-trivial \citep{Webby1996}, and at times complex \citep{Fu2011, Tang2015}. The purpose, class, method, and different forms of data all shape subsequent analyses and without a guide for the reader in making these decisions, it is challenging to know what specific chapters are relevant to the task at hand. Unification and integration at the start of the book would be helpful to the reader. This is done to some extent by the examples provided, but the description resolves very rapidly into details. Consequently, this is certainly an extraordinarily thorough statistics text, but the reader must be relatively expert. \newline
 
 This is also a second edition that addressed two major suggestions associated the former edition - incorporate \proglang{R} and provide more real world examples. This edition excels in both these respects. At the end of most chapters and in many instances interspersed within sections, \proglang{R} commands and links to the package \pkg{tswge} are clearly referenced. There are a total of 249 time series packages currently available on \href{https://cran.r-project.org/web/views/TimeSeries.html}{CRAN }(The Comprehensive R Archive Network), and it is a strength to have a package formally link to a detailed text as is the case here. This provides a compelling case to using the \pkg{tswge} for analyses and the text for comprehension of the maths and application. The reader should be prepared for formulas, proofs, and a description of the functions within the \proglang{R} package \pkg{tswge} and should be relatively fluent in all three domains. Structually, the appendices are provided at the end of section within every chapter. This is ideal because the implementation of the theory is thus readily at hand. Examples are also included \textit{in situ} and threaded throughout the book for various topics. Notes, theorems, proofs, and annotations are also included.  \newline
 
