check tense a bit more still

--- a/lortie.review.tex
+++ b/lortie.review.tex
@@ -52,10 +52,10 @@ Many data include time or have longitudinal dimensionalilty. When these data inc
 \textbf{Content} \newline
 This is first and foremost a statistics book \citep{Woodward2017}. Nonetheless, the general context of time series is not well developed, and it is assumed that a. the reader is already familiar with time series to some extent and b. the reader is competent and able to parse the maths and proofs associated with relevant axioms to particular aspects of time series. This is unfortunate because the general utility of and decision to implement time series are important, non-trivial \citep{Webby1996}, and at times complex \citep{Fu2011, Tang2015}. The purpose, class, method, and different forms of data all shape subsequent analyses and without a guide for the reader in making these decisions, it is challenging to know what specific chapters are relevant to the task at hand. Unification and integration at the start of the book would be helpful to the reader. This is done to some extent by the examples provided, but the description resolves very rapidly into details. Consequently, this is certainly an extraordinarily thorough statistics text, but the reader must be relatively expert. \newline
 
-This is also a second edition that addressed two major suggestions associated the former edition - incorporate \proglang{R} and provide more real world examples. This edition excels in both these respects. At the end of most chapters and in many instances interspersed within sections, \proglang{R} commands and links to the package \pkg{tswge} are clearly referenced. There are a total of 249 time series packages currently available on \href{https://cran.r-project.org/web/views/TimeSeries.html}{CRAN }(The Comprehensive R Archive Network), and it is a strength to have a package formally link to a detailed text as is the case here. This provides a compelling case to using the \pkg{tswge} for analyses and the text for comprehension of the maths and application. The reader should be prepared for formulas, proofs, and a description of the functions within the \proglang{R} package \pkg{tswge} and should be relatively fluent in all three domains. Structually, the appendices are provided at the end of section within every chapter. This is ideal because the implementation of the theory is thus readily at hand. Examples are also included \textit{in situ} and threaded throughout the book for various topics. Notes, theorems, proofs, and annotations are also included.  \newline
+This is also a second edition that addressed two major suggestions associated the former edition - incorporate \proglang{R} and provide more real world examples. This edition excels in both these respects. At the end of most chapters and in many instances interspersed within sections, \proglang{R} commands and links to the package \pkg{tswge} are clearly referenced. There are a total of 249 time series packages currently available on \href{https://cran.r-project.org/web/views/TimeSeries.html}{CRAN }(The Comprehensive R Archive Network), and it is a strength to have a package formally link to a detailed text as is the case here. This provides a compelling case for statistics with the \pkg{tswge} package and the text for comprehension of the maths and application. The reader should be prepared for formulas, proofs, and a description of the functions within the \proglang{R} package \pkg{tswge} and should be relatively fluent in all three domains. Structually, the appendices are provided at the end of each section within every chapter. This is ideal because the implementation of the theory is thus readily at hand. Examples are also included \textit{in situ} and threaded throughout the book for various topics. Notes, theorems, proofs, and annotations are also included.  \newline
 
 \textbf{Critique} \newline
-The authors have extensive experience with time series. Too rarely within the text is this expertise invoked to directly guide the reader. Two notable exceptions include the chapter on model identification and the chapter on model building. In each instance, the authors relax the prose to an extent and state preferences in selecting models and how to best do this, and in the latter instance, provide a summary that describes an expert workflow in working with models for time series. The choice to commmit time to a statistical text versus long-form documentation such as vignettes within the \proglang{R} ecosystem should provide the reader with rewards in depth and in expertise and description of reasoning that is typically not provided in shorter treatments of topics. The depth is provided in this text but more of the larger, expert insights could also have been offered. The linkages to theory are sufficient, but other alternatives in \proglang{R} were not developed. There are also over 100 similar texts listed on \href{https://amazon.com}{amazon} and many free ebook alternatives. Consequently, a statement by the authors not just on the differences to a former edition, but on the specific niche that this book fulfils was needed. The commitment to digest this particular book is substantitative, and each major class of analysis and forecasting is provided. The strongest and likely most unique contributions to the field are provided in chapters 7-10 wherein parameter estimation, models, and multivariate time series are described. These sections warrant the commitment, but a more landscape-level of time series is best secured in other resources. In summary, this is an excellent higher-level text that does not shy away from maths to describe time series and delivers a detailed appreciation and workflow to parameters and models. However, additional reading will be needed to be able to best understand the differences in data and general theory for time series. The \proglang{R} packcage \pkg{tswge} that is anchored to this text is impressive, covers virtually every aspect of time series, and it is fit well into each topic in the theory, real-world data, and implementation. An ideal use for this text would be those with experience in time series but seek to further develop and ground their knowledge in theory or for those that are willing to commit time a priori to time series general reading then use this text.
+The authors have extensive experience with time series. Too rarely within the text is this expertise invoked to directly guide the reader. Two notable exceptions include the chapter on model identification and the chapter on model building. In each instance, the authors relax the prose to an extent and state preferences in selecting models and how to best do this, and in the latter instance, provide a summary that describes an expert workflow in working with models for time series. The choice to commmit time to a statistical text versus long-form documentation such as vignettes within the \proglang{R} ecosystem should provide the reader with rewards in depth and in expertise and description of reasoning that is typically not provided in relatively shorter treatments of topics. The depth is provided in this text but more of the larger, expert insights could also have been offered. The linkages to theory are sufficient, but other alternatives in \proglang{R} were not developed. There are also over 100 similar texts listed on \href{https://amazon.com}{amazon} and many free ebook alternatives. Consequently, a statement by the authors not just on the differences to a former edition, but on the specific niche that this book fulfils was needed. The commitment to digest this particular book is substantive, and each major class of analysis and forecasting was provided. The strongest and likely most unique contributions to the field are provided in chapters 7-10 wherein parameter estimation, models, and multivariate time series were described. These sections warrant the commitment, but a more landscape-level of time series is best secured in other resources. In summary, this is an excellent higher-level text that does not shy away from maths to describe time series and delivers a detailed appreciation and workflow to parameters and models. However, additional reading will be needed to be able to best understand the differences in data and general theory for time series. The \proglang{R} package \pkg{tswge} that is anchored to this text is impressive, covers virtually every aspect of time series, and it was fit well into each topic in the theory, real-world data, and implementation. An ideal use for this text would be those with experience in time series but that seek to further develop and ground their knowledge in theory.
 
 \bibliography{literature}
 
