--- a/literature.bib
+++ b/literature.bib
@@ -119,6 +119,17 @@
    type = {Journal Article}
 }
 
+@book{Dettling2014,
+   author = {Dettling, M.},
+   title = {Applied Time Series Analysis},
+   publisher = {ETH},
+   address = {Zurich},
+   year = {2014},
+   type = {Book}
+}
+
+
+
 
 
 
