fighting with R in title

--- a/lortie.review.tex
+++ b/lortie.review.tex
@@ -9,7 +9,7 @@
 \Plainreviewer{Christopher Lortie}
 
 %% about the book
-\Booktitle{Applied Time Series Analysis With R. Second Edition.}
+\Booktitle{Applied Time Series Analysis With R Second Edition.}
 \Bookauthor{Wayne A. Woodward, Henry L. Gray, and Alan C. Elliott}
 \Publisher{CRC Press}
 \Pubaddress{USA}
