--- a/lortie.review.tex
+++ b/lortie.review.tex
@@ -10,6 +10,7 @@
 
 %% about the book
 \Booktitle{Applied Time Series Analysis With R. Second Edition} 
+\Plaintitle{Applied Time Series Analysis With R. Second Edition}
 \Bookauthor{Wayne A. Woodward, Henry L. Gray, and Alan C. Elliott}
 \Publisher{CRC Press}
 \Pubaddress{USA}
