got the proglang added to title

--- a/lortie.review.tex
+++ b/lortie.review.tex
@@ -9,8 +9,8 @@
 \Plainreviewer{Christopher Lortie}
 
 %% about the book
-\Booktitle{Applied Time Series Analysis With R. Second Edition} 
-\Plaintitle{Applied Time Series Analysis With R. Second Edition}
+\Booktitle{Applied Time Series Analysis With \proglang{R}. Second Edition} 
+\Plaintitle{Applied Time Series Analysis With R. Second Edition} 
 \Bookauthor{Wayne A. Woodward, Henry L. Gray, and Alan C. Elliott}
 \Publisher{CRC Press}
 \Pubaddress{USA}
