--- a/lortie.review.tex
+++ b/lortie.review.tex
@@ -51,7 +51,7 @@ Many data include time or have longitudinal dimensions. When these data include 
 
 
 \textbf{Content} \newline
-This is a second edition that addresses two major suggestions associated with the former edition - incorporate \proglang{R} and provide more real-world empirical examples. This edition excels in both these respects. At the end of most chapters and in many instances interspersed within sections, \proglang{R} commands and links to the package \pkg{tswge} are clearly referenced. There are a total of 249 time series packages currently available on \href{https://cran.r-project.org/web/views/TimeSeries.html}{CRAN }(The Comprehensive \proglang{R} Archive Network), and it is a strength to have a package formally link to a detailed text as is the case here. This provides a compelling case for statistics with the \pkg{tswge} package and the text for comprehension of the maths and application. The reader should be prepared for formulas, proofs, and a description of the functions within the \proglang{R} package \pkg{tswge} and should be relatively fluent in all three domains. Structurally, the appendices are provided at the end of each section within every chapter. This is ideal because the implementation of the theory is thus readily at hand. Examples are also included \textit{in situ} and threaded throughout the book for various topics. Notes, theorems, proofs, and annotations are also included.  \newline
+This is a second edition. Two major suggestions associated with the former edition - incorporate \proglang{R} and provide more real-world empirical examples are addressed. This edition excels in both these respects. At the end of most chapters and in many instances interspersed within sections, \proglang{R} commands and links to the package \pkg{tswge} are clearly referenced. There are a total of 249 time series packages currently available on \href{https://cran.r-project.org/web/views/TimeSeries.html}{CRAN }(The Comprehensive \proglang{R} Archive Network), and it is a strength to have a package formally link to a detailed text as is the case here. This provides a compelling case for statistics with the \pkg{tswge} package and the text for comprehension of the maths and application. The reader should be prepared for formulas, proofs, and a description of the functions within the \proglang{R} package \pkg{tswge} and should be relatively fluent in all three domains. Structurally, the appendices are provided at the end of each section within every chapter. This is ideal because the implementation of the theory is thus readily at hand. Examples are also included \textit{in situ} and threaded throughout the book for various topics. Notes, theorems, proofs, and annotations are also included.  \newline
 
 This is first and foremost a statistics book \citep{Woodward2017}. It is an extraordinarily thorough statistics text, but the reader must be relatively expert. The general context of time series is underdeveloped typically lacking a sufficient general, natural language preamble to most topics. It is assumed that a. the reader is already familiar with time series to some extent and b. the reader is competent and able to parse the maths and proofs associated with relevant axioms to particular aspects of time series. This is unfortunate because the general utility of and decision to implement time series are important and evolving \citep{Mishra2017}, non-trivial \citep{Webby1996}, and at times complex \citep{Fu2011, Tang2015}. The purpose, class, and different forms of data that can comprise time series all shape subsequent analyses, and without a guide for the reader in making these decisions, it is challenging to know what specific chapters are relevant to the task at hand. Admittedly, this is very pragmatic perspective for a statistical text, but unification and integration at the start of the book would be helpful to the reader. This is done to some extent by the examples provided, but the description resolves very rapidly into details. \newline
 
